@@ -1,3 +1,11 @@
+2006-11-01  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/lcms.c: in interactive mode, return an extra
+	boolean indicating the choide for the "Don't ask me again" toggle.
+
+	* app/plug-in/plug-in-icc-profile.c: look for the extra return
+	value and update the "color-profile-policy" in gimprc.
+
 2006-11-01  Michael Natterer  <mitch@gimp.org>
 
 	* app/plug-in/gimppluginprocframe.c
